--- a/src/i18n/Translations/ar.json
+++ b/src/i18n/Translations/ar.json
@@ -1,8 +1,17 @@
 {
+  "Arabic": "عربي",
   "Draft": "مسودة",
   "Published": "نشرت",
   "Project": "مشروع",
   "Create": "يخلق",
-  "Search": "يبحث",
-  "Delete": "يمسح"
+  "Create Project": "إنشاء مشروع",
+  "Search Project": "مشروع البحث",
+  "Delete Project": "حذف المشروع",
+  "Name": "اسم",
+  "Description": "وصف",
+  "Cancel": "يلغي",
+  "Edited": "تم تحريره",
+  "mins ago": "قبل دقائق",
+  "Created by": "انشأ من قبل",
+  "on": "على"
 }
