Updated Folder structure

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -11,7 +11,7 @@
   "Description": "وصف",
   "Cancel": "يلغي",
   "Edited": "تم تحريره",
-  "mins ago": "قبل دقائق",
+  "min ago": "قبل دقائق",
   "Created by": "انشأ من قبل",
   "on": "على"
 }
