--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -10,7 +10,7 @@
   "Description": "Description",
   "Cancel": "Cancel",
   "Edited": "Edited",
-  "mins ago": "mins ago",
+  "ago": "ago",
   "Created by": "Created by",
   "on": "on"
 }
